--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,33 @@
-.w-40 {
-  width: 40%;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
+    font-family: "Inter", sans-serif;
 }
+
+.whatsppbtn {
+    border: 1px solid #27ae60;
+    color: #27ae60;
+    padding: 10px 18px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.whatsppbtn:hover {
+    border: 1px solid #27ae60;
+    background-color: #53c382;
+    color: white;
+}
+
+.call {
+    background: linear-gradient(to right, #0acefe, #2699fb);
+    padding: 10px 18px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.call:hover {
+    color: white;
+}
+
+
