--- a/style/media.css
+++ b/style/media.css
@@ -6,13 +6,47 @@
     .btn-outer {
         position: fixed;
         bottom: 0;
+        background-color: white;
+        padding: 5px 0;
         width: 100%;
         left: 0;
         justify-content: center !important;
     }
-    .whatsppbtn,.call{
+
+    .whatsppbtn,
+    .call {
         padding: 7px 15px;
         font-size: 14;
+    }
+
+    .bannerContent h1 {
+        font-size: 29px;
+        text-align: center;
+        font-weight: 700;
+        line-height: 37px;
+    }
+
+    .banner-w-lg {
+        height: 350px;
+        object-fit: cover;
+        border-radius: 16px;
+    }
+   .sohel {
+        bottom: 17px;
+        right: 18px;
+        width: 176px;
+        height: 97px;
+        background-color: rgb(245, 236, 236);
+        border-radius: 25px 0;
+        box-shadow: 6px 6px 0px 1px rgba(0, 0, 0, 0.7);
+        border: 2px dashed #008000; 
+      
+    }
+
+    .sohel h3 {
+        font-size: 26px; 
+        letter-spacing: 1.5px; 
+        text-shadow: 2px 2px 0px rgba(255, 0, 0, 0.5); 
     }
 }
 
@@ -33,11 +67,18 @@
 } */
 
 @media (min-width: 1400px) {
-    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl,
+    .container-xxl {
         max-width: 1170px;
     }
-     .w-xl-40 {
+
+    .w-xl-40 {
         width: 40%;
     }
+    
 }
-
