--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,27 @@ body{font-family: "Inter", sans-serif;}
     color: white;
 }
 
+
+.LoginForm{
+    padding: 40px;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .bannerContent h1 {
     font-size: 52px;
     font-weight: 700;
