--- a/style/style.css
+++ b/style/style.css
@@ -37,9 +37,29 @@ body{font-family: "Inter", sans-serif;}
 
 .LoginForm{
     padding: 40px;
-    
-}
 
+}
+.highlights-section{
+    background-color: #f7faff;
+}
+.highlights-section h2{
+    color: #0a2134;
+    font-size: 36px;
+    font-weight: 700;
+}
+.highlights-section p{
+    color: #9babb8;
+    font-weight: 700;
+}
+.icon-box {
+    width: 100px;
+    height: 100px;
+    opacity: 0.6; /* 60% opacity */
+}
+.icon-box svg {
+    width: 50px;
+    height: 50px;
+}
 
 
 
