--- a/style/style.css
+++ b/style/style.css
@@ -60,9 +60,13 @@ body{font-family: "Inter", sans-serif;}
     width: 50px;
     height: 50px;
 }
+.offcanvas, .offcanvas-lg, .offcanvas-md, .offcanvas-sm, .offcanvas-xl, .offcanvas-xxl {
+    --bs-offcanvas-width: 274px;}
 
-
-
+.navbar {
+    
+--bs-navbar-padding-y: 0;
+}
 
 
 
