--- a/style/media.css
+++ b/style/media.css
@@ -49,9 +49,11 @@
         text-shadow: 2px 2px 0px rgba(255, 0, 0, 0.5); 
     }
     .highlights-section h2{
-    background-color: #0a2134;
-    font-size: 25px;
+    font-size: 24px;
     font-weight: 700;
+}.highlights-section p{
+
+    font-weight: 500;
 }
 }
 
